--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>理财网站</title>
 </head>
 
@@ -21,13 +23,11 @@
     <nav class="top">
       <span class="tel">理财热线：400-888-8888</span>
       <ul>
-        <li>
-          <a href="#">登录</a>
-          <a href="#">快速注册</a>
-          <a href="#">关于</a>
-          <a href="#">帮助</a>
-          <a href="#">APP下载</a>
-        </li>
+        <li><a href="#">登录</a></li>
+        <li><a href="#">快速注册</a></li>
+        <li><a href="#">关于</a></li>
+        <li><a href="#">帮助</a></li>
+        <li><a href="#">APP下载</a></li>
       </ul>
     </nav>
     <nav class="main">
@@ -35,13 +35,11 @@
         <img src="img/logo@1x.png" alt="回到首页">
       </a>
       <ul>
-        <li>
-          <a href="#">首页</a>
-          <a href="#">理财频道</a>
-          <a href="#">投资频道</a>
-          <a href="#">新手专区</a>
-          <a href="#">安全保障</a>
-        </li>
+        <li><a href="#">首页</a></li>
+        <li><a href="#">理财频道</a></li>
+        <li><a href="#">投资频道</a></li>
+        <li><a href="#">新手专区</a></li>
+        <li><a href="#">安全保障</a></li>
       </ul>
     </nav>
   </header>
@@ -92,7 +90,7 @@
       </div>
     </section>
 
-    <section class="notice">
+    <section class="notice clearfix">
       <a href="#">
         <span>2015-12-31</span>
         元旦期间业务受理及值班公告元旦期间业务受理及值班公告元旦期间业务受理及值班公告
@@ -100,16 +98,15 @@
       <a href="#" class="more">更多公告</a>
     </section>
 
-    <section class="product">
+    <section class="product clearfix">
       <h2>
         固定期限产品
         <em>甄选优质基金</em>
         <em>省时省力</em>
         <em>坐等收益</em>
       </h2>
-
       <div class="product-content">
-        <div class="item">
+        <div class="item clearfix">
           <h3><em>3</em>个月</h3>
           <div class="info">
             <p>
@@ -125,8 +122,24 @@
             <a href="#">购买</a>
           </div>
         </div>
-        <div class="item">
-          <h3><em>3</em>个月</h3>
+        <div class="item clearfix">
+          <h3><em>3-6</em>个月</h3>
+          <div class="info">
+            <p>
+              约定年化收益率：
+              <span class="year-rate">3.60% <i>起</i></span>
+            </p>
+            <p>
+              总成交金额：
+              <span class="money">2880 <i>万元</i></span>
+            </p>
+          </div>
+          <div class="buy">
+            <a href="#">购买</a>
+          </div>
+        </div>
+        <div class="item clearfix">
+          <h3><em>6-12</em>个月</h3>
           <div class="info">
             <p>
               约定年化收益率：
@@ -141,8 +154,8 @@
             <a href="#">购买</a>
           </div>
         </div>
-        <div class="item">
-          <h3><em>3</em>个月</h3>
+        <div class="item clearfix">
+          <h3><em>12-24</em>个月</h3>
           <div class="info">
             <p>
               约定年化收益率：
@@ -157,8 +170,8 @@
             <a href="#">购买</a>
           </div>
         </div>
-        <div class="item">
-          <h3><em>3</em>个月</h3>
+        <div class="item clearfix">
+          <h3><em>24</em>个月</h3>
           <div class="info">
             <p>
               约定年化收益率：
@@ -176,16 +189,15 @@
       </div>
     </section>
 
-    <section class="product">
+    <section class="product clearfix">
       <h2>
         固定期限产品
         <em>甄选优质基金</em>
         <em>省时省力</em>
         <em>坐等收益</em>
       </h2>
-
       <div class="product-content">
-        <div class="item">
+        <div class="item clearfix">
           <h3><em>3</em>个月</h3>
           <div class="info">
             <p>
@@ -201,59 +213,59 @@
             <a href="#">购买</a>
           </div>
         </div>
-        <div class="item">
-          <h3><em>3</em>个月</h3>
+        <div class="item clearfix">
+          <h3><em>7</em>个月</h3>
           <div class="info">
             <p>
               约定年化收益率：
-              <span class="year-rate">3.50% <i>起</i></span>
+              <span class="year-rate">5.50% <i>起</i></span>
             </p>
             <p>
               总成交金额：
-              <span class="money">1880 <i>万元</i></span>
+              <span class="money">38,800 <i>万元</i></span>
             </p>
           </div>
           <div class="buy">
-            <a href="#">购买</a>
+            <a href="javascript:void(0)" class="disabled">还款中</a>
           </div>
         </div>
-        <div class="item">
-          <h3><em>3</em>个月</h3>
+        <div class="item clearfix">
+          <h3><em>1</em>个月</h3>
           <div class="info">
             <p>
               约定年化收益率：
-              <span class="year-rate">3.50% <i>起</i></span>
+              <span class="year-rate">4.60% <i>起</i></span>
             </p>
             <p>
               总成交金额：
-              <span class="money">1880 <i>万元</i></span>
+              <span class="money">48,800 <i>万元</i></span>
             </p>
           </div>
           <div class="buy">
-            <a href="#">购买</a>
+            <a href="javascript:void(0)" class="disabled">还款中</a>
           </div>
         </div>
-        <div class="item">
-          <h3><em>3</em>个月</h3>
+        <div class="item clearfix">
+          <h3><em>12</em>个月以上</h3>
           <div class="info">
             <p>
               约定年化收益率：
-              <span class="year-rate">3.50% <i>起</i></span>
+              <span class="year-rate">7.20% <i>起</i></span>
             </p>
             <p>
               总成交金额：
-              <span class="money">1880 <i>万元</i></span>
+              <span class="money">58,800 <i>万元</i></span>
             </p>
           </div>
           <div class="buy">
-            <a href="#">购买</a>
+            <a href="javascript:void(0)" class="disabled">已满标</a>
           </div>
         </div>
       </div>
     </section>
 
     <nav class="footer">
-      <div class="footer-content">
+      <div class="footer-content clearfix">
         <p class="brand"></p>
         <ul>
           <li class="title">关于我们</li>
@@ -299,6 +311,7 @@
     </ul>
     <p>北京某互联网金融公司 © 版权所有 2015-2020</p>
   </footer>
+
 </body>
 
 </html>
