--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://cdn.bootcss.com/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcss.com/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>理财网站</title>
 </head>
@@ -45,7 +47,7 @@
   </header>
 
   <div class="container">
-    <section class="transaction">
+    <section class="transaction clearfix">
       <div class="trans-content">
         <div class="trans-data">
           <span>平台累计成交金额</span>
@@ -64,14 +66,28 @@
     </section>
 
     <section class="ad">
-      <div class="item">
-        <img src="img/ad001.png">
-      </div>
-      <div class="item">
-        <img src="img/ad002.png">
-      </div>
-      <div class="item">
-        <img src="img/ad003.png">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <picture>
+            <source srcset="img/ad001-l.png" media="(min-width: 50em)">
+            <source srcset="img/ad001-m.png" media="(min-width: 30em)">
+            <img src="img/ad001.png" alt="2015年度报告">
+          </picture>
+        </div>
+        <div class="item">
+          <picture>
+            <source srcset="img/ad002-l.png" media="(min-width: 50em)">
+            <source srcset="img/ad002-m.png" media="(min-width: 30em)">
+            <img src="img/ad002.png" alt="新年红包">
+          </picture>
+        </div>
+        <div class="item">
+          <picture>
+            <source srcset="img/ad003-l.png" media="(min-width: 50em)">
+            <source srcset="img/ad003-m.png" media="(min-width: 30em)">
+            <img src="img/ad003.png" alt="新年秘籍">
+          </picture>
+        </div>
       </div>
     </section>
 
@@ -312,6 +328,10 @@
     <p>北京某互联网金融公司 © 版权所有 2015-2020</p>
   </footer>
 
+  <script src="https://cdn.bootcss.com/jquery/1.12.3/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="https://cdn.bootcss.com/picturefill/3.0.3/picturefill.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
